--- a/src/app/components/register/register.html
+++ b/src/app/components/register/register.html
@@ -1,1 +1,32 @@
-Register
+<div class="row justify-content-center content-header">
+  <img src="assets/images/icon/iconFinama.PNG" alt="">
+</div>
+<div class="row justify-content-center container-form">
+  <div class="row col-8 content-form">
+    <div class="col-4" style="background-color: #00b3ee">
+      image
+    </div>
+    <div class="col-8 form-input">
+      <div class="row justify-content-center">Sign Up</div>
+      <div class="row">
+        <div class="col-6">
+          <input type="text" class="form-control" placeholder="Text input">
+          <input type="text" class="form-control" placeholder="Text input">
+          <input type="text" class="form-control" placeholder="Text input">
+          <input type="text" class="form-control" placeholder="Text input">
+          <input type="text" class="form-control" placeholder="Text input">
+          <input type="text" class="form-control" placeholder="Text input">
+          <re-captcha (resolved)="resolved($event)" siteKey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></re-captcha>
+        </div>
+        <div class="col-6">
+          <input type="text" class="form-control" placeholder="Text input">
+          <input type="text" class="form-control" placeholder="Text input">
+          <input type="text" class="form-control" placeholder="Text input">
+          <input type="text" class="form-control" placeholder="Text input">
+          <input type="text" class="form-control" placeholder="Text input">
+          <input type="text" class="form-control" placeholder="Text input">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
