--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,20 @@ html, body {
   height: 100%;
   overflow: hidden;
 }
+
+.container-form {
+  height: 60%;
+}
+
+.content-form {
+  box-shadow: 0 1px 14px 0px rgba(0,0,0,.12), 0 1px 14px 0 rgba(0,0,0,.12), 0 1px 14px 0 rgba(0,0,0,.12);
+  padding: 0;
+}
+
+.form-input {
+  padding: 10px 20px;
+}
+
+.form-input input.form-control {
+  margin: 10px 0;
+}
