--- a/src/app/components/register/register.html
+++ b/src/app/components/register/register.html
@@ -6,8 +6,8 @@
     <div class="col-4" style="background-color: #00b3ee">
       image
     </div>
-    <div class="col-8 form-input">
-      <div class="row justify-content-center">Sign Up</div>
+    <form class="col-8 form-input">
+      <div class="row justify-content-center">{{ 'main.button.signUp' | translate }}</div>
       <div class="row">
         <div class="col-6">
           <input type="text" class="form-control" placeholder="Text input">
@@ -27,6 +27,6 @@
           <input type="text" class="form-control" placeholder="Text input">
         </div>
       </div>
-    </div>
+    </form>
   </div>
 </div>
