--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -10,7 +10,7 @@
   <div class="row col-6 justify-content-center">
     <div class="col-2">
       <select class="form-control"  id="language"
-              [(ngModel)]="language" name="language" (change)="translate.use(language)">
+              [(ngModel)]="language" name="language" (change)="selectLang(language)">
         <option *ngFor="let language of translate.getLangs()" [value]="language" [selected]="language === translate.currentLang">{{language}}</option>
       </select>
     </div>
