--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 .container-form {
-  height: 60%;
+  height: 70%;
 }
 
 .content-form {
@@ -16,6 +16,7 @@ html, body {
 
 .form-input {
   padding: 10px 20px;
+  overflow: auto;
 }
 
 .form-input input.form-control {
