--- a/src/app/components/register/register.html
+++ b/src/app/components/register/register.html
@@ -7,7 +7,7 @@
       image
     </div>
     <form class="col-8 form-input" #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm.value)">
-      <div class="row justify-content-center">{{ 'main.button.signUp' | translate }}</div>
+      <div class="row justify-content-center">{{ 'main.button.register' | translate }}</div>
       <div class="row">
         <div class="col-6">
           <input type="text" class="form-control" placeholder="Text input"
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="row btn-submit">
-        <button type="submit" class="btn btn-primary">{{ 'main.button.signUp' | translate }}</button>
+        <button type="submit" class="btn btn-primary">{{ 'main.button.register' | translate }}</button>
       </div>
     </form>
   </div>
