--- a/src/app/components/register/register.html
+++ b/src/app/components/register/register.html
@@ -11,8 +11,7 @@
       <div class="row">
         <div class="col-6">
           <input type="text" class="form-control" placeholder="Text input"
-                 name="username"  [(ngModel)]="username"
-                 #user_name="ngModel" required>
+                 name="username" required>
           <input type="text" class="form-control" placeholder="Text input" required>
           <input type="text" class="form-control" placeholder="Text input" required>
           <input type="text" class="form-control" placeholder="Text input" required>
